Fixed Screen Size Error
Text was cut off on mobile which has been fixed by adding in Overflow Scroll.

--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,9 @@ body {
   color: #222;
 
   background-color: #f9f9f9;
-  background: rgba(255, 255, 255, 0.2); 
-  backdrop-filter: blur(10px); 
-  -webkit-backdrop-filter: blur(10px); 
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 12px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -48,16 +48,19 @@ body {
 
 #StartScreen {
   margin: auto;
-  font-size: 30px;
   text-align: center;
   background-color: #f9f9f9;
   background: rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(10px); 
-  -webkit-backdrop-filter: blur(10px); 
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 12px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   padding: 1.5rem;
+  overflow: scroll;
+  font-size: 1.2rem;
+  max-width: 800px;
+  line-height: 1.3;
 }
 
 #formContainer2 {
@@ -112,12 +115,12 @@ body {
   margin-right: auto;
   color: #222;
 
-  background: rgba(255, 255, 255, 0.2); 
+  background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px); 
-  border: 1px solid rgba(255, 255, 255, 0.3); 
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 12px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   padding: 1.5rem;
 }
 
